Fix old bugs. Consolidate code and file naming

--- a/draw.simple.1.glsl300.vao.html
+++ b/draw.simple.1.glsl300.vao.html
@@ -397,12 +397,12 @@
 
             out vec4 fragColor;
 
-            const vec3  lightDirection = -normalize(vec3(-1.0,  -1.0,  -1.0)); // Direction -> right up forward
+            const vec3  lightDirection = normalize(vec3(-1.0,  -1.0,  1.0)); // Direction -> right up forward
             const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
             in mediump vec3 nm;
             void main() 
             {
-              float prod   =  dot (lightDirection,   normalize(nm));
+              float prod   =  -dot (lightDirection,   normalize(nm));
               fragColor = vec4 (greenColor * prod,  1.0);
             }
          </script>
