Consolidate file names

--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -18,7 +18,9 @@
       </canvas>
    </div>
    <div class="sample">
-      Animate, 2 progs<br/> P1 Verts dynamic<br/> P2 2 VAOs static<br/>
+      Animate 1/2 combined<br/>
+      2 progs<br/>
+      P1 Verts dynamic<br/> P2 2 VAOs static<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
          <script src="./draw.simple.1.glsl300.vao.auto/animate.js"></script>
       </canvas>
@@ -43,7 +45,7 @@
       Light change direction<br/>
       to merge</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300.vao.auto/cone1Animate.js"></script>
+         <script src="./draw.simple.1.glsl300.vao.auto/cone1Animate1.js"></script>
       </canvas>
    </div>
    <div class="sample">
