--- a/webgpu1.html
+++ b/webgpu1.html
@@ -222,7 +222,7 @@ context      = canvas.getContext('webgpu');
                return vec4f(0.0, 0.0, 0.0, 0.1);
             }
          </script>
-         <script src="./webgpu1/animate.js"></script>
+         <script src="./webgpu1/animate1.js"></script>
       </canvas>
    </div>
    <div class="sample" >
@@ -383,7 +383,7 @@ context      = canvas.getContext('webgpu');
       Tip normal set to 0,0,0<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "360" height = "360"  class="yellow">
-         <script src="./webgpu1/cone1Animate.js"></script>
+         <script src="./webgpu1/cone1Animate1.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
